added warning message for users using mobile devices on intro page - wip?

--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,4 +1,13 @@
 <div class="ui text container center aligned">
+  <div class="ui icon red warning message">
+    <i class="warning icon"></i>
+    <div class="content">
+      <div class="header">
+        You appear to be on a mobile device
+      </div>
+      <p>This application works best on a desktop. Please use a desktop device instead.</p>
+    </div>
+  </div>
   <h3 class="first headroom">Welcome!</h3>
   <p>
     Provide link to data or upload data. (add information about accepted formats)
