--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -41,6 +41,10 @@ h5 {
   --button-back-hover: #444444;
 }
 
+.ui.warning.message {
+  display: none;
+}
+
 .form-content {
   margin-top: 2em;
 }
@@ -108,6 +112,9 @@ nav ul li.active {
       display: block;
     }
     nav ul li.active + li {
+      display: block;
+    }
+    .ui.warning.message {
       display: block;
     }
 }
