--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -68,12 +68,20 @@
             <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
           {{else}}
             {{#if properties.fields}}
-              <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
+              {{#unless (eq field "lon")}}
+                {{#unless (eq field "lat")}}
+                  <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
+                {{/unless}}
+              {{/unless}}
               {{#unless (eq field "city")}}
                 {{#unless (eq field "region")}}
                   {{#unless (eq field "district")}}
                     {{#unless (eq field "postcode")}}
-                      <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                      {{#unless (eq field "lon")}}
+                        {{#unless (eq field "lat")}}
+                          <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
+                        {{/unless}}
+                      {{/unless}}
                     {{/unless}}
                   {{/unless}}
                 {{/unless}}
