--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,4 +1,11 @@
 <div class="ui text container center aligned">
+  <div class="ui icon negative mobile message">
+    <i class="warning icon"></i>
+    <div class="content">
+      <div class="header"> It appears you are on a mobile device. </div>
+      <p> This web application works best on a desktop. Please continue on a desktop device </p>
+    </div>
+  </div>
   <h3 class="first headroom">Welcome!</h3>
   <p>
     Provide link to data or upload data. (add information about accepted formats)
