--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,13 @@
+.ui.negative.message.mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 510px) {
+  .ui.negative.message.mobile {
+    display: block;
+  }
+}
+
 .ui.button {
   margin-top: 15px;
 }
