--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -148,8 +148,8 @@
     </div>
     <div class="ui hidden divider"></div>
     <div class="review-nav">
-      <button class="ui button red left floated" onClick={{action "openModal" "review-cancel"}}>Cancel</button>
-      <button class="ui button green right floated" onClick={{action "submit"}}>Submit</button>
+      <button class="ui compact button red left floated" onClick={{action "openModal" "review-cancel"}}>Cancel</button>
+      <button class="ui compact button green right floated" onClick={{action "submit"}}>Submit</button>
     </div>
     {{#ui-modal name="review-cancel" class="review-cancel" onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
       <i class="close icon"></i>
@@ -162,10 +162,10 @@
         </div>
       </div>
       <div class="actions">
-        <div class="ui black deny button">
+        <div class="ui black deny compact button">
           No
         </div>
-        <div class="ui positive right labeled icon button">
+        <div class="ui positive right labeled icon compact button">
           Yes
           <i class="checkmark icon"></i>
         </div>
