--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom">Data format</h3>
+  <h3 class="first headroom">Data format {{help-modal}}</h3>
   <table class="ui celled table">
     <thead>
       <tr>
@@ -52,7 +52,7 @@
         <div class="field">
           <label>
             {{#if (eq field "number")}}
-              house number 
+              house number
             {{else}}
               {{field}}
             {{/if}}
