--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom">More information</h3>
+  <h3 class="first headroom">More information {{help-modal}}</h3>
   <p>
     We'll gather more info from the user about license/attribution/update frequency here.
   </p>
