--- a/app/templates/components/help-modal.hbs
+++ b/app/templates/components/help-modal.hbs
@@ -2,7 +2,7 @@
   <div class="help-button" onClick={{action "openModal" "help-modal"}}>
     <i class="help circle outline icon"></i> Help
   </div>
-  {{#ui-modal name="help-modal" class="help-modal" onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
+  {{#ui-modal name="help-modal" class="help-modal" onApprove=(action 'submitModal') onDeny=(action 'cancelModal')}}
     <i class="close icon"></i>
     <div class="header">
       How can we help?
