--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-	<h3 class="first headroom">Contact information {{help-modal}}</h3>
+	<h3 class="first headroom">Contact information {{help-modal submit=(action "changeRoute")}}</h3>
 	{{#with (changeset model MaintainerValidator) as |changeset|}}
 		<div class="ui grid">
 			<div class="eight wide column ui form">
