--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container">
-  <h3 class="first headroom">Data format {{help-modal}}</h3>
+  <h3 class="first headroom">Data format {{help-modal submit=(action "changeRoute")}}</h3>
   <table class="ui celled table">
     <thead>
       <tr>
