--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,5 +1,5 @@
 <div class="ui text container center aligned">
-  <h3 class="first headroom"> Welcome! {{help-modal}} </h3>
+  <h3 class="first headroom"> Welcome! {{help-modal submit=(action "changeRoute")}} </h3>
   <p>
     Provide link to data or upload data. (add information about accepted formats)
   </p>
