add house number fix

--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -16,7 +16,13 @@
           {{/if}}
           {{#unless (eq field "lon")}}
             {{#unless (eq field "lat")}}
-              <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>{{field}}</a></th>
+              <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>
+                {{#if (eq field "number")}}
+                  house number 
+                {{else}}
+                  {{field}}
+                {{/if}}
+              </a></th>
             {{/unless}}
           {{/unless}}
         {{/each-in}}
