--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -140,6 +140,14 @@
                 </td>
               </tr>
             {{/if}}
+            {{#if (eq field "street")}}
+              <tr>
+                <td>May contain unit number</td>
+                <td>
+                  {{properties.may_contain_units}}
+                </td>
+              </tr>
+            {{/if}}
           </tbody>
         </table>
       {{/if}}
