--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="ui inverted vertical masthead center aligned segment teal">
+<div class="ui inverted vertical masthead center aligned segment">
 	<div class="ui text container">
 		<h1 class="ui inverted header">Mobility-on-Demand Sandbox</h1>
 		<h2>subtitle text here</h2>
