--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -121,7 +121,7 @@ nav ul li.active {
     .ui.negative.message.mobile {
       display: block;
     }
-    .content {
+    .intro {
       display: none;
     }
 }
