--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
 		<h1 class="ui inverted header">Mobility-on-Demand Sandbox</h1>
 		<h2>subtitle text here</h2>
 	</div>
-	<div class="ui vertical stripe segment"></div>
+  <div class="ui hidden divider"></div>
   <nav class="progress">
     <ul>
       <li class={{if (eq currentRouteName 'intro') "active"}}> 1. Data Source </li>
