--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -4,7 +4,7 @@
     We'll gather more info from the user about license/attribution/update frequency here.
   </p>
   <div class="form-content">
-    <div class="ui teal tiny message">
+    <div class="ui tiny message">
       <p> <span class="required"> * </span>
         indicates field is <b> required </b> to proceed </p>
     </div>
