--- a/app/templates/components/select-column.hbs
+++ b/app/templates/components/select-column.hbs
@@ -1,15 +1,26 @@
-<div class="fifteen wide field">
-  {{#ui-dropdown class="selection fluid" selected=properties.fields.firstObject onChange=(action "chooseField" field) as |execute mapper|}}
-    <div class="default text">
-      Source column headings
-    </div>
-    <i class="dropdown icon"></i>
-    <div class="menu">
-      {{#each columnHeadings as |heading|}}
-        <div class="item" data-value="{{map-value mapper heading}}">
-          {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+<div class="field">
+  <div class="fields">
+    <div class="fifteen wide field">
+      {{#ui-dropdown class="selection fluid" selected=properties.fields.firstObject onChange=(action "chooseField" field) as |execute mapper|}}
+        <div class="default text">
+          Source column headings
         </div>
-      {{/each}}
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          {{#each columnHeadings as |heading|}}
+            <div class="item" data-value="{{map-value mapper heading}}">
+              {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+            </div>
+          {{/each}}
+        </div>
+      {{/ui-dropdown}}
     </div>
-  {{/ui-dropdown}}
+    {{#if properties.fields.firstObject}}
+      <div class="one wide field">
+        <button class="ui icon mini button basic red" onClick={{action "removeField" field}}>
+          <i class="remove icon"></i>
+        </button>
+      </div>
+    {{/if}}
+  </div>
 </div>
