--- a/app/templates/components/split-column.hbs
+++ b/app/templates/components/split-column.hbs
@@ -23,4 +23,6 @@
 <button class="ui button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Use postfix unit</button>
 {{/if}}
 
+
+<button class="ui button basic green" onClick={{action "extractionFunction" "row_fxn_remove_prefix" field}}>Remove prefix (another column)</button>
 <button class="ui button basic blue" onClick={{action "removeFunction" field}}>Remove split <i class="remove icon"></i></button>
