--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -70,6 +70,8 @@
             {{join-column field=field properties=properties showAdditionalJoinDropdown=showAdditionalJoinDropdown columnHeadings=columnHeadings model=model}}
           {{else if (eq properties.function "split")}}
             {{split-column field=field properties=properties columnHeadings=columnHeadings model=model}}
+          {{else if (eq properties.function "row_fxn_remove_prefix")}}
+            {{remove-prefix-postfix field=field properties=properties model=model}}
           {{else if properties.function}}
             <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
           {{else}}
