--- a/app/templates/components/remove-prefix-postfix.hbs
+++ b/app/templates/components/remove-prefix-postfix.hbs
@@ -1,1 +1,32 @@
+ <a class="item">
+   <i class="minus icon"></i>
+ </a>
+ <div class="fifteen wide field">
+   <!-- {{#ui-dropdown class="selection fluid" selected=column onChange=(action "editField" field index) as |execute mapper|}}
+     <div>
+       {{column}} (example value: {{sample-data user_data=user_data heading=column}})
+     </div>
+     <i class="dropdown icon"></i>
+     <div class="menu">
+       {{#each remainingColumnHeadings as |heading|}}
+         <div class="item" data-value="{{map-value mapper heading}}">
+           {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+         </div>
+       {{/each}}
+     </div>
+   {{/ui-dropdown}} -->
+   {{#ui-dropdown class="selection fluid" onChange=(action "setPrefixPostfixField" field) as |execute mapper|}}
+     <div class="default text">
+       Source column headings
+     </div>
+     <i class="dropdown icon"></i>
+     <div class="menu">
+       {{#each remainingColumnHeadings as |heading|}}
+         <div class="item" data-value="{{map-value mapper heading}}">
+           {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+         </div>
+       {{/each}}
+     </div>
+   {{/ui-dropdown}}
+ </div>
  <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
