--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -63,6 +63,32 @@
     {{#each-in model.submission.oaFields as |field properties|}}
       {{#if (eq field currentField)}}
         <form class="ui form segment">
+          <div class="data-functions">
+            {{#if properties.fields}}
+              {{#unless (eq field "lon")}}
+                {{#unless (eq field "lat")}}
+                  <div class="function" onClick={{action "addFunction" field "join"}}>
+                    + Join columns
+                  </div>
+                {{/unless}}
+              {{/unless}}
+              {{#unless (eq field "city")}}
+                {{#unless (eq field "region")}}
+                  {{#unless (eq field "district")}}
+                    {{#unless (eq field "postcode")}}
+                      {{#unless (eq field "lon")}}
+                        {{#unless (eq field "lat")}}
+                          <div class="function" onClick={{action "addFunction" field "split"}}>
+                            - Split column
+                          </div>
+                        {{/unless}}
+                      {{/unless}}
+                    {{/unless}}
+                  {{/unless}}
+                {{/unless}}
+              {{/unless}}
+            {{/if}}
+          </div>
           <div class="field">
             <label>
               {{#if (eq field "number")}}
@@ -84,26 +110,6 @@
             {{else if properties.function}}
               <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
             {{else}}
-              {{#if properties.fields}}
-                {{#unless (eq field "lon")}}
-                  {{#unless (eq field "lat")}}
-                    <button class="ui button basic blue" onClick={{action "addFunction" field "join"}}>Join two columns for this field</button>
-                  {{/unless}}
-                {{/unless}}
-                {{#unless (eq field "city")}}
-                  {{#unless (eq field "region")}}
-                    {{#unless (eq field "district")}}
-                      {{#unless (eq field "postcode")}}
-                        {{#unless (eq field "lon")}}
-                          {{#unless (eq field "lat")}}
-                            <button class="ui button basic blue" onClick={{action "addFunction" field "split"}}>Split one column for this field</button>
-                          {{/unless}}
-                        {{/unless}}
-                      {{/unless}}
-                    {{/unless}}
-                  {{/unless}}
-                {{/unless}}
-              {{/if}}
             {{/if}}
             {{#unless (eq currentField "postcode")}}
                 <button class="ui button" onClick={{action "nextField" field}}>Move on to {{nextField}} <i class="right arrow icon"></i></button>
