--- a/app/templates/components/join-column.hbs
+++ b/app/templates/components/join-column.hbs
@@ -7,7 +7,7 @@
   <div class="field">
     <div class="fields">
       <div class="fifteen wide field">
-        {{#ui-dropdown class="selection fluid" selected=column onChange=(action "editField" field index) as |execute mapper|}}
+        {{#ui-dropdown class="selection fluid data-format" selected=column onChange=(action "editField" field index) as |execute mapper|}}
           <div class="default text">
             Source column headings
           </div>
