--- a/app/templates/components/select-column.hbs
+++ b/app/templates/components/select-column.hbs
@@ -1,5 +1,5 @@
 <div class="sixteen wide field">
-  {{#ui-dropdown class="selection fluid select" selected=properties.fields.firstObject onChange=(action "chooseField" field) as |execute mapper|}}
+  {{#ui-dropdown class="selection fluid data-format" selected=properties.fields.firstObject onChange=(action "chooseField" field) as |execute mapper|}}
     <div class="default text">
       Source column headings
     </div>
