--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,5 +1,6 @@
 <div class="ui text container">
   <h3 class="first headroom">Data format</h3>
+  <p> <i> This is a small sample of the data for preview </i> </p>
   <div class="form-content">
     <div class="ui teal tiny message">
       <p> <span class="required"> * </span>
@@ -63,7 +64,7 @@
     {{#each-in model.submission.oaFields as |field properties|}}
       {{#if (eq field currentField)}}
         <form class="ui form segment">
-          {{#if (and properties.fields (eq properties.function null))}}
+          {{#if (eq properties.function null)}}
             <div class="data-functions">
               {{#unless (eq field "lon")}}
                 {{#unless (eq field "lat")}}
