--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,10 +11,22 @@
   margin-top: 10px;
 }
 
+.openaddress.logo {
+  background-image: url('./sprite@2x.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30%;
+  width: 100%;
+  height: 110px;
+  margin-top: 5px;
+}
+
 .ui.inverted.vertical.masthead.center.aligned.segment {
+  background: url('https://openaddresses.io/img/skyline.jpg') no-repeat 0 0;
   padding-bottom: 0px;
   margin-bottom: 30px;
-  background: var(--openaddress-green);
+  background-size: cover;
+  height: 45vh;
 }
 
 h1 {
@@ -110,7 +122,7 @@ nav ul {
 }
 
 nav ul li {
-  padding: 25px 10px 5px 10px;
+  padding: 23px 10px 5px 10px;
   margin: 0px 15px;
   color: var(--openaddress-gray);
   letter-spacing: 1px;
