--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
 <div class="ui inverted vertical masthead center aligned segment">
 	<div class="ui text container">
+    <div class="openaddress logo"></div>
 		<h1 class="ui inverted header">Mobility-on-Demand Sandbox</h1>
 		<h2>subtitle text here</h2>
 	</div>
