--- a/app/templates/components/join-column.hbs
+++ b/app/templates/components/join-column.hbs
@@ -26,7 +26,7 @@
       </div>
       {{#if (gte index 1)}}
         <div class="one wide field">
-          <button class="ui icon tiny compact button basic red" onClick={{action "removeField" field column}} style="margin-top: 15px">
+          <button class="ui icon tiny compact button basic red clear-field" onClick={{action "removeField" field column}}>
             <i class="minus icon"></i>
           </button>
         </div>
