--- a/app/templates/components/select-column.hbs
+++ b/app/templates/components/select-column.hbs
@@ -17,8 +17,8 @@
     </div>
     {{#if properties.fields.firstObject}}
       <div class="one wide field">
-        <button class="ui icon mini button basic red" onClick={{action "removeField" field}}>
-          <i class="remove icon"></i>
+        <button class="ui icon tiny compact button basic red clear-field" style="margin-top: 15px" onClick={{action "removeField" field}}>
+          <i class="minus icon"></i>
         </button>
       </div>
     {{/if}}
