--- a/app/templates/components/split-column.hbs
+++ b/app/templates/components/split-column.hbs
@@ -24,5 +24,5 @@
 {{/if}}
 
 
-<button class="ui button basic green" onClick={{action "extractionFunction" "row_fxn_remove_prefix" field}}>Remove contents of another field from this field</button>
+<button class="ui button basic green" onClick={{action "extractionFunction" "removePrefixOrPostfix" field}}>Remove contents of another field from this field</button>
 <button class="ui button basic blue" onClick={{action "removeFunction" field}}>Remove split <i class="remove icon"></i></button>
