--- a/app/templates/components/remove-prefix-postfix.hbs
+++ b/app/templates/components/remove-prefix-postfix.hbs
@@ -2,20 +2,7 @@
    <i class="minus icon"></i>
  </a>
  <div class="fifteen wide field">
-   <!-- {{#ui-dropdown class="selection fluid" selected=column onChange=(action "editField" field index) as |execute mapper|}}
-     <div>
-       {{column}} (example value: {{sample-data user_data=user_data heading=column}})
-     </div>
-     <i class="dropdown icon"></i>
-     <div class="menu">
-       {{#each remainingColumnHeadings as |heading|}}
-         <div class="item" data-value="{{map-value mapper heading}}">
-           {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
-         </div>
-       {{/each}}
-     </div>
-   {{/ui-dropdown}} -->
-   {{#ui-dropdown class="selection fluid" onChange=(action "setPrefixPostfixField" field) as |execute mapper|}}
+   {{#ui-dropdown class="selection fluid" selected=properties.prefix_or_postfix onChange=(action "setPrefixPostfixFieldFromDropdown" field) as |execute mapper|}}
      <div class="default text">
        Source column headings
      </div>
@@ -29,16 +16,15 @@
      </div>
    {{/ui-dropdown}}
  </div>
-
- <div class="ui form">
-   <div class="grouped inline fields">
-     <div class="field">
-       {{ui-radio name="fruit" label="Remove from beginning of field" value="prefix" current=prefixOrPostfix onChange=(action (mut prefixOrPostfix))}}
-     </div>
-     <div class="field">
-       {{ui-radio name="fruit" label="Remove from end of field" value="postfix" current=prefixOrPostfix onChange=(action (mut prefixOrPostfix))}}
+  <div class="ui form">
+     <div class="grouped inline fields">
+       <div class="field">
+         {{ui-radio name="fruit" label="Remove prefix" value="row_fxn_remove_prefix" current=extractionFunction onChange=(action "setPrefixPostfixFieldFromRadio" field)}}
+       </div>
+       <div class="field">
+         {{ui-radio name="fruit" label="Remove postfix" value="row_fxn_remove_postfix" current=extractionFunction onChange=(action "setPrefixPostfixFieldFromRadio" field)}}
+       </div>
      </div>
    </div>
- </div>
 
  <button class="ui button basic green" onClick={{action "removeFunction" field}}>Remove extraction <i class="remove icon"></i></button>
